AC_INIT([swmipc], [0.0.2])

AC_CONFIG_SRCDIR([swm-simple-ipc-client.c])

AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CC

AC_CHECK_HEADERS([getopt.h])

AC_CHECK_LIB(readline, readline)

AC_CONFIG_FILES([Makefile])
AC_CONFIG_HEADERS([ac-config-headers.h])

AC_OUTPUT
